feat: updated ipynb

--- a/Research Paper Implementation/Multilayer Perceptron/Untitled.ipynb
+++ b/Research Paper Implementation/Multilayer Perceptron/Untitled.ipynb
@@ -23,8 +23,29 @@
     "The total input $x_j$, to unit $j$ is a linear function of the outputs $y_i$, of the units that are connected to $j$ and of the weights $w_{ji}$, on these connections.\n",
     "$$\n",
     "x_j = \\sum_i y_iw_{ji}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "143d9348-ae91-4829-8377-645725ed27cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def x_j(y, w):\n",
+    "    y_w_multi = []\n",
+    "    for y_i, w_ji in zip(y, w):\n",
+    "        y_w_multi.append(y_i * w_ji)\n",
+    "    x_j = sum(y_w_multi)\n",
+    "    return x_j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1894f0c5-960b-425a-bddc-4a39b68f7e37",
+   "metadata": {},
+   "source": [
     "## Equation (2).\n",
     "Units can be given biases by introducing an extra input to each unit which always has a value of 1.<br>\n",
     "The weight on this extra input is called the bias and is equivalent to a threshold of the opposite sign.<br>\n",
@@ -37,8 +58,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "a75b8681-f505-428b-af35-4379462c83dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def sigmoid_activation(x):\n",
+    "    return 1/(1+math.exp**(-x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac35eba5-5e6b-41ca-9a5f-c1cda5bba5c2",
+   "metadata": {},
+   "source": [
+    "It is not necessary to use exactly the functions given in equations (1) and (2).<br>\n",
+    "Any input-output function which has a bounded derivative will do.<br><br>\n",
+    "However, the use of a linear function for combining the inputs to a unit before applying the nonlinearity greatly simplifies the learning procedure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a00b8b5-9567-4e2b-9328-94485ff53fe0",
+   "metadata": {},
+   "source": [
+    "# Equation (3)\n",
+    "The aim is to find a set of weights that ensure that for each input vector the output vector produced by the network is the same as (or sufficiently close to) the desired output vector.<br>\n",
+    "If there is a fixed, finite set of input-output cases, the total error in the performance of the network with a particular set of weights can be computed by comparing the actual and desired output vectors for every case.<br><br>\n",
+    "The total error $E$ is definded as:\n",
+    "$$\n",
+    "E = \\frac{1}{2}\\sum_c\\sum_j(y_{j,c}-d_{j,c})^2\n",
+    "$$\n",
+    "$where$<br>\n",
+    "$c$ is an index over cases (input-output pairs),<br>\n",
+    "$j$ is an index over output units,<br>\n",
+    "$y$ is the actual state of an output unit,<br>\n",
+    "$d$ is its desired state\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3d23812e-3ac2-45e8-9a40-5e181b28e8e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_total_error(Y, D):\n",
+    "    E = 0\n",
+    "    for y_c, d_c in zip(Y, D):\n",
+    "        yc = []\n",
+    "        for y_j, d_j in zip(y_c, d_j):\n",
+    "            yc.append((y_j - d_j)**2)\n",
+    "        E = E + sum(yc)\n",
+    "    E = 0.5 * E\n",
+    "    return E            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e7478f9-4180-40c6-8e59-4662bdbcbb1a",
+   "metadata": {},
+   "source": [
+    "# Equation (4)\n",
+    "\n",
+    "The backward pass starts by computing $\\partial E / \\partial y$ for each of the output units.<br>\n",
+    "Differentiating equation(3) for a particular case $c$, and suppressing the index $c$ gives.\n",
+    "$$\n",
+    "\\partial E / \\partial y_j = y_j - d_j\n",
+    "$$\n",
+    "We can then apply the chain rule to compute $\\partial E / \\partial x_j$\n",
+    "$$\n",
+    "\\partial E / \\partial x_j = \\partial E / \\partial y_j \\cdot dy_j / dx_j\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b09ea6db-e3e1-4043-bf56-a2482ba31642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_gradient(Y, D, dy_dx):\n",
+    "    dE_dy = [y_j - d_j for y_j, d_j in zip(Y, D)]\n",
+    "    dE_dx = [dE_dy_j * dy_dx_j for dE_dy_j, dy_dx,j in zip(dE_dy, dy_dx)]\n",
+    "    return dE_dy, dE_dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884690cf-014a-4248-b71a-51d20f0b2f96",
+   "metadata": {},
+   "source": [
+    "# Equation (5)\n",
+    "Differentiating equation(2) to get the value of $dy_j/dx_j$ and substituting gives:\n",
+    "$$\n",
+    "\\partial E / \\partial x_j = \\partial E / \\partial y_j \\cdot y_j(1-y_j)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "63171d20-1654-4ddc-b2cc-94e15aa4af66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_dE_dx(Y, dE_dy):\n",
+    "    dE_dx = [dE_dy_j * y_j * (1 - y_j) for dE_dy_j, y_j in zip(dE_dy, Y)]\n",
+    "    return dE_dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a48b331c-3cfc-4d5c-9cee-ea76a63903dd",
+   "metadata": {},
+   "source": [
+    "# Equation(6)\n",
+    "This means that we know how a change in the total input $x$ to an output unit will affect the error.<br>\n",
+    "But this total input is just a linear function of the states of the lower level units and it is also a linear function of the weights on the connections,<br>so it is easy to comput how the error will be affected by changing these states and weights.<br>\n",
+    "For a weight $w_{ji}$ from $i$ to $j$ the derivative is:\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "    \\partial E / \\partial w_{ji} &= \\partial E / \\partial x_j \\cdot \\partial x_j / \\partial w_{ji}\\\\\n",
+    "    &=\\partial E / \\partial x_j \\cdot y_i\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "and for the output of the $i^{th}$ unit the contribution to $\\partial E / \\partial y_i$ resulting from the effect of $i$ on $j$ is simply\n",
+    "$$\n",
+    "\\partial E / \\partial x_j \\cdot \\partial x_j / \\partial y_i = \\partial E / \\partial x_j \\cdot w_{ji}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8de1a652-06b1-4e17-baa2-88565a0810d6",
+   "metadata": {},
+   "source": [
+    "# Equation (7)\n",
+    "so taking into account all the connections emanating from unit $i$ we have\n",
+    "$$\n",
+    "\\partial E / \\partial y_i = \\sum_j \\partial E/\\partial x_j \\cdot w_{ji}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19baa5e9-3fb1-44ed-9dfb-18978e1261c1",
+   "metadata": {},
+   "source": [
+    "# Equation (8)\n",
+    "One way of using $\\partial E / \\partial w$ is to change the weights after every input-output case.<br>\n",
+    "This has the advantage that no separate memory is required for the derivatives.<br>\n",
+    "An alternative scheme, which we used in the research reported here, is to accumulate $\\partial E / \\partial w$ over all the input-output cases before changing the weights.<br>\n",
+    "The simplest version of gradient descent is to change each weight by an amount of proportional to the accumulated $\\partial E / \\partial w$.\n",
+    "$$\n",
+    "\\Delta w = - \\epsilon \\partial E / \\partial w\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f8c805-7d55-4066-aadd-b75a165aa771",
+   "metadata": {},
+   "source": [
+    "# Equation (9)\n",
+    "The equation(8) can be significantly improved, without sacrificing the simplicity and locality,<br> by using an acceleration method in which the current gradient is used to modify the velocity of the point in weight space instead of its position.\n",
+    "$$\n",
+    "\\Delta w(t) = - \\epsilon \\partial E / \\partial w(t) + \\alpha \\Delta w (t-1)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6d3df813-6536-47b4-a7ff-65e27579307c",
+   "id": "2a247fa7-fcac-4e92-9fe0-31c422f32654",
    "metadata": {},
    "outputs": [],
    "source": []
