feat: fixed w to \omega

--- a/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
+++ b/Research Paper Implementation/Single Layer Perceptron/Single Layer Perceptron.ipynb
@@ -279,7 +279,7 @@
     "\\begin{cases} \n",
     "    c_1 = 0 \\\\\n",
     "    c_2 = (1-P_a)N_e \\\\\n",
-    "    c_3 = 2P_aw \\\\\n",
+    "    c_3 = 2P_a\\omega \\\\\n",
     "    c_4 \\approx 0 \\\\\n",
     "\\end{cases}\n",
     "\n",
@@ -290,7 +290,7 @@
     "    c_1 = 0 \\\\\n",
     "    c_2 = (1-P_a)N_e \\\\\n",
     "    c_3 = 0 \\\\\n",
-    "    c_4 = 2w \\\\\n",
+    "    c_4 = 2 \\omega \\\\\n",
     "\\end{cases}\n",
     "\n",
     "The reduction of $c_2$ to zero gives the $\\mu$-system a definite advantage over the $\\Sigma$-system.<br>\n",
@@ -300,8 +300,8 @@
     "\\begin{cases} \n",
     "    c_1 = 0 \\\\\n",
     "    c_2 = 1-P_a \\\\\n",
-    "    c_3 = 2{P_{a}}^{2}{q}^2 [\\frac{(wN_{R}-1)^2}{N_{R}-2}] \\\\\n",
-    "    c_4 = \\frac{2(1-P_a)N_{R}}{(1-w_c)N_{A}} \\\\\n",
+    "    c_3 = 2{P_{a}}^{2}{q}^2 [\\frac{(\\omega N_{R}-1)^2}{N_{R}-2}] \\\\\n",
+    "    c_4 = \\frac{2(1-P_a)N_{R}}{(1-\\omega_c)N_{A}} \\\\\n",
     "\\end{cases}\n",
     "\n",
     "$where$\n",
@@ -310,7 +310,7 @@
     "        $q =$ ratio of $\\sigma_{n_{S_r{r}}}$ to $\\overleftrightarrow{n}_{S_r}$<br>\n",
     "        $N_R = $ number of responses in the system<br>\n",
     "        $N_A = $ number of A-units in the system<br>\n",
-    "        $w_c = $ proportion of A-units common to $R_1$ and $R_2$<br>\n",
+    "        $\\omega_c = $ proportion of A-units common to $R_1$ and $R_2$<br>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
@@ -322,8 +322,8 @@
     "\\begin{cases} \n",
     "    c_1 = 0 \\\\\n",
     "    c_2 = (1-P_a)N_e \\\\\n",
-    "    c_3 = 2(P_aN_eqw{N_{R}}^2)^2 \\\\\n",
-    "    c_4 = 2(1 - P_a)wN_{R}N_e \\\\\n",
+    "    c_3 = 2(P_aN_eq\\omega {N_{R}}^2)^2 \\\\\n",
+    "    c_4 = 2(1 - P_a)\\omega N_{R}N_e \\\\\n",
     "\\end{cases}\n",
     "In both the $\\alpha$ and $\\beta$ systems, performance will be poorer for the sum-discriminating model than for the mean-discriminating case.<br><br>\n",
     "In the $\\gamma$-system, however, it can be shown that $P_{r(\\Sigma)} = P_{r(\\mu)}$; i.e., it makes no difference in performance whether the $\\Sigma$-system or $\\mu$-system is used.<br>\n",
@@ -372,16 +372,16 @@
     "\\begin{aligned}\n",
     "    c_3 &= \\sum_{r=1,2} P_a (1 - P_a) N_e\\\\\n",
     "    &\\times \\left[ P_{c1_r}^2 + \\sigma_3^2(P_{c1_r}) \\right. \\\\\n",
-    "    &\\quad + \\sigma_j^2(P_{c1r} + (wN_{R} - 1)^2) \\\\\n",
+    "    &\\quad + \\sigma_j^2(P_{c1r} + (\\omega N_{R} - 1)^2) \\\\\n",
     "    &\\quad \\times (P_{c1_x} + \\sigma_S^2 (P_{c1_x}) \\\\\n",
-    "    &\\quad + \\sigma_j^2(P_{c_{rx}})) + 2(wN_{R} - 1) \\\\\n",
+    "    &\\quad + \\sigma_j^2(P_{c_{rx}})) + 2(\\omega N_{R} - 1) \\\\\n",
     "    &\\quad \\left. (P_{c1_r}P_{c1_x}) \\right] + P_a^2 N_e^2 \\\\\n",
-    "    &\\quad \\times \\left[ \\sigma_S^2(P_{c1_r}) + (wN_{R} - 1)^2 \\right. \\\\\n",
-    "    &\\quad \\times \\sigma_S^2(P_{c1_r}) + (wN_{R} - 1)^2 \\\\\n",
-    "    &\\quad \\left. \\times \\sigma_S^2(P_{c1_x}) + 2(wN_{R} - 1) \\epsilon \\right] \\\\\n",
+    "    &\\quad \\times \\left[ \\sigma_S^2(P_{c1_r}) + (\\omega N_{R} - 1)^2 \\right. \\\\\n",
+    "    &\\quad \\times \\sigma_S^2(P_{c1_r}) + (\\omega N_{R} - 1)^2 \\\\\n",
+    "    &\\quad \\left. \\times \\sigma_S^2(P_{c1_x}) + 2(\\omega N_{R} - 1) \\epsilon \\right] \\\\\n",
     "    c_4 &= \\sum_{r=1,2} P_a N_e \\left[ P_{c1_r} - P_{c1_r}^2 \\right. \\\\\n",
     "    &\\quad - \\sigma_S^2(P_{c1_r}) - \\sigma_j^2(P_{c1_r}) \\\\\n",
-    "    &\\quad \\left. + (wN_R - 1)(P_{c1_x} - P_{c1_x}^2 - \\sigma_j^2(P_{c1_x})) \\right]\n",
+    "    &\\quad \\left. + (\\omega N_R - 1)(P_{c1_x} - P_{c1_x}^2 - \\sigma_j^2(P_{c1_x})) \\right]\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
     "\\end{cases}\n",
@@ -404,12 +404,12 @@
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
     "    c_3 &= \\sum_{r=1,2} \\left[ \\frac{1}{P_a (N_e - 1)} - \\frac{1}{N_e - 1} \\right] \\\\\n",
-    "    &\\quad \\times \\left[ \\sigma_j^2(P_{c1_r}) + (wN_{R} - 1)^2 \\\\\n",
+    "    &\\quad \\times \\left[ \\sigma_j^2(P_{c1_r}) + (\\omega N_{R} - 1)^2 \\\\\n",
     "    \\times \\sigma_j^2(P_{c1_r}) \\right]\\\\\n",
-    "    &\\quad + \\left[ \\sigma_S^2(P_{c1_r}) + (wN_{R} - 1)^2\n",
+    "    &\\quad + \\left[ \\sigma_S^2(P_{c1_r}) + (\\omega N_{R} - 1)^2\n",
     "    \\sigma_S^2(P_{c1_x}) \\right] \\\\\n",
     "    c_4 &= \\sum_{r=1,2} \\frac{1}{P_a N_e} \\left[ P_{c1_r} - P_{c1_r}^2 - \\sigma_S^2(P_{c1_r}) - \\sigma_j^2(P_{c1_r}) \\right. \\\\\n",
-    "    &\\quad + (wN_R - 1)\\left(P_{c1_x} - P_{c1_x}^2 - \\sigma_S^2\n",
+    "    &\\quad + (\\omega N_R - 1)\\left(P_{c1_x} - P_{c1_x}^2 - \\sigma_S^2\n",
     "    (P_{c1_x}) - \\sigma_j^2(P_{c1_x}) \\right) \\Bigg]\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
