feat: updated ipynb

--- a/Research Paper Implementation/Multilayer Perceptron/Multilayer Perceptron.ipynb
+++ b/Research Paper Implementation/Multilayer Perceptron/Multilayer Perceptron.ipynb
@@ -193,6 +193,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0c82b1a7-50ce-4cab-8999-0b76241e2f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_weight_and_output_gradients(dE_dx, Y, W):\n",
+    "    dE_dw = [[dE_dx_j * y_i for y_i in Y] for dE_dx_j in dE_dx]\n",
+    "    dE_dy = [sum(dE_dx_j * w_ji for dE_dx_j, w_ji in zip(dE_dx, w_row)) for w_row in W]\n",
+    "\n",
+    "    return dE_dw, dE_dy"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8de1a652-06b1-4e17-baa2-88565a0810d6",
    "metadata": {},
@@ -202,6 +216,19 @@
     "$$\n",
     "\\partial E / \\partial y_i = \\sum_j \\partial E/\\partial x_j \\cdot w_{ji}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9c399a84-c4f6-46cf-a4d7-f6a2e2ca77f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_gradient_dE_dy(dE_dx, W):\n",
+    "    dE_dy = [sum(dE_dx_j * w_row[i] for dE_dx_j, w_row in zip(dE_dx, W)) for i in range(len(W[0]))]\n",
+    "\n",
+    "    return dE_dy\n"
    ]
   },
   {
@@ -220,6 +247,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d23241e8-8113-4c8b-91fd-34dc1b770290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_weights(W, dE_dw, epsilon):\n",
+    "    updated_W = [[w_ji - epsilon * dE_dw_ji for w_ji, dE_dw_ji in zip(w_row, dE_dw_row)] \n",
+    "                 for w_row, dE_dw_row in zip(W, dE_dw)]\n",
+    "\n",
+    "    return updated_W"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e1f8c805-7d55-4066-aadd-b75a165aa771",
    "metadata": {},
@@ -228,13 +269,38 @@
     "The equation(8) can be significantly improved, without sacrificing the simplicity and locality,<br> by using an acceleration method in which the current gradient is used to modify the velocity of the point in weight space instead of its position.\n",
     "$$\n",
     "\\Delta w(t) = - \\epsilon \\partial E / \\partial w(t) + \\alpha \\Delta w (t-1)\n",
-    "$$"
+    "$$\n",
+    "$where$<br>$t$ is incremented by 1 for each sweep through the whole set of input-output cases,<br>\n",
+    "$\\alpha$ is an exponential decay factor between 0 and 1 that determines the relative contribution of the current gradient and earlier gradients to the weight change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2a247fa7-fcac-4e92-9fe0-31c422f32654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_weights_with_momentum(W, dE_dw, prev_delta_W, epsilon, alpha):\n",
+    "    updated_W = []\n",
+    "    current_delta_W = []\n",
+    "    for w_row, dE_dw_row, prev_delta_W_row in zip(W, dE_dw, prev_delta_W):\n",
+    "        updated_w_row = []\n",
+    "        current_delta_w_row = []\n",
+    "        for w_ji, dE_dw_ji, prev_delta_w_ji in zip(w_row, dE_dw_row, prev_delta_W_row):\n",
+    "            delta_w_ji = -epsilon * dE_dw_ji + alpha * prev_delta_w_ji\n",
+    "            updated_w_row.append(w_ji + delta_w_ji)\n",
+    "            current_delta_w_row.append(delta_w_ji)\n",
+    "        updated_W.append(updated_w_row)\n",
+    "        current_delta_W.append(current_delta_w_row)\n",
+    "\n",
+    "    return updated_W, current_delta_W"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a247fa7-fcac-4e92-9fe0-31c422f32654",
+   "id": "3f71e34f-772f-4e67-bec1-2b9768bca9f1",
    "metadata": {},
    "outputs": [],
    "source": []
