feat: updated mlp implementation

--- a/Research Paper Implementation/Multilayer Perceptron/Multilayer Perceptron.ipynb
+++ b/Research Paper Implementation/Multilayer Perceptron/Multilayer Perceptron.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "id": "3be96ca0-d646-4c8a-8720-84c3f23af1ee",
    "metadata": {},
    "outputs": [],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "id": "d561d7d1-0750-4b0d-9f57-c326c30ec44f",
    "metadata": {},
    "outputs": [],
@@ -381,17 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "id": "7f839156-b4ba-4917-8b1e-af320e1601ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0])"
+       "array([1, 1])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "id": "2a14845c-0c0d-4bbf-a99b-711dd5ba8c12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "59f24246-4bbd-4daa-9856-eff57a25e236",
    "metadata": {},
    "outputs": [],
@@ -433,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "id": "07361c48-6edd-409d-ae39-fb44defc3283",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcf577713eaa405d869b2bfd646fc2f0",
+       "model_id": "0ea133f2b9d24dcfb8b1ac9f4be854a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,56 +455,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epcoh = 0, loss = 0.00022015812030046683\n",
-      "epcoh = 100, loss = 0.00024805913810660646\n",
-      "epcoh = 200, loss = 0.0002476592420388722\n",
-      "epcoh = 300, loss = 0.0002472605859686342\n",
-      "epcoh = 400, loss = 0.00024686316246771246\n",
-      "epcoh = 500, loss = 0.00024646696432065315\n",
-      "epcoh = 600, loss = 0.0002460719845141572\n",
-      "epcoh = 700, loss = 0.0002456782162257503\n",
-      "epcoh = 800, loss = 0.0002452856528127462\n",
-      "epcoh = 900, loss = 0.0002448942878024028\n",
-      "epcoh = 1000, loss = 0.00024450411488210946\n",
-      "epcoh = 1100, loss = 0.00024411512789061324\n",
-      "epcoh = 1200, loss = 0.00024372732080899152\n",
-      "epcoh = 1300, loss = 0.00024334068775329397\n",
-      "epcoh = 1400, loss = 0.00024295522296626228\n",
-      "epcoh = 1500, loss = 0.0002425709208106972\n",
-      "epcoh = 1600, loss = 0.00024218777576241046\n",
-      "epcoh = 1700, loss = 0.0002418057824040047\n",
-      "epcoh = 1800, loss = 0.00024142493541886884\n",
-      "epcoh = 1900, loss = 0.00024104522958541942\n",
-      "epcoh = 2000, loss = 0.00024066665977198488\n",
-      "epcoh = 2100, loss = 0.0002402892209317278\n",
-      "epcoh = 2200, loss = 0.00023991290809774427\n",
-      "epcoh = 2300, loss = 0.00023953771637887948\n",
-      "epcoh = 2400, loss = 0.0002391636409554962\n",
-      "epcoh = 2500, loss = 0.00023879067707548244\n",
-      "epcoh = 2600, loss = 0.0002384188200504969\n",
-      "epcoh = 2700, loss = 0.00023804806525272584\n",
-      "epcoh = 2800, loss = 0.00023767840811142764\n",
-      "epcoh = 2900, loss = 0.00023730984410987198\n",
-      "epcoh = 3000, loss = 0.00023694236878258292\n",
-      "epcoh = 3100, loss = 0.00023657597771245783\n",
-      "epcoh = 3200, loss = 0.00023621066652843335\n",
-      "epcoh = 3300, loss = 0.0002358464309027788\n",
-      "epcoh = 3400, loss = 0.00023548326654937478\n",
-      "epcoh = 3500, loss = 0.00023512116922104015\n",
-      "epcoh = 3600, loss = 0.000234760134707964\n",
-      "epcoh = 3700, loss = 0.00023440015883556564\n",
-      "epcoh = 3800, loss = 0.00023404123746321241\n",
-      "epcoh = 3900, loss = 0.00023368336648201926\n",
-      "epcoh = 4000, loss = 0.00023332654181377728\n",
-      "epcoh = 4100, loss = 0.00023297075940933743\n",
-      "epcoh = 4200, loss = 0.00023261601524741043\n",
-      "epcoh = 4300, loss = 0.00023226230533311733\n",
-      "epcoh = 4400, loss = 0.000231909625697067\n",
-      "epcoh = 4500, loss = 0.00023155797239421636\n",
-      "epcoh = 4600, loss = 0.00023120734150265229\n",
-      "epcoh = 4700, loss = 0.0002308577291229259\n",
-      "epcoh = 4800, loss = 0.0002305091313771772\n",
-      "epcoh = 4900, loss = 0.0002301615444079326\n"
+      "epoch = 0, loss = 1.515299254822505e-06\n",
+      "epoch = 100, loss = 0.0011382061169406218\n",
+      "epoch = 200, loss = 0.001027563443952797\n",
+      "epoch = 300, loss = 0.0009961547544680594\n",
+      "epoch = 400, loss = 0.0009829231501828981\n",
+      "epoch = 500, loss = 0.0009755293629079944\n",
+      "epoch = 600, loss = 0.0009700667922673693\n",
+      "epoch = 700, loss = 0.00096505909860649\n",
+      "epoch = 800, loss = 0.0009599195974658966\n",
+      "epoch = 900, loss = 0.0009544317004099574\n",
+      "epoch = 1000, loss = 0.0009485424496002533\n",
+      "epoch = 1100, loss = 0.0009422715575851839\n",
+      "epoch = 1200, loss = 0.000935668782090934\n",
+      "epoch = 1300, loss = 0.0009287933794722068\n",
+      "epoch = 1400, loss = 0.0009217042603246528\n",
+      "epoch = 1500, loss = 0.0009144555252701081\n",
+      "epoch = 1600, loss = 0.0009070947474750055\n",
+      "epoch = 1700, loss = 0.0008996626467705672\n",
+      "epoch = 1800, loss = 0.0008921934410137505\n",
+      "epoch = 1900, loss = 0.0008847154944903507\n",
+      "epoch = 2000, loss = 0.0008772520623846864\n",
+      "epoch = 2100, loss = 0.000869822028132582\n",
+      "epoch = 2200, loss = 0.0008624405841980733\n",
+      "epoch = 2300, loss = 0.0008551198361597633\n",
+      "epoch = 2400, loss = 0.0008478693256925249\n",
+      "epoch = 2500, loss = 0.0008406964760368702\n",
+      "epoch = 2600, loss = 0.0008336069672491564\n",
+      "epoch = 2700, loss = 0.0008266050498435782\n",
+      "epoch = 2800, loss = 0.0008196938054844332\n",
+      "epoch = 2900, loss = 0.0008128753628006092\n",
+      "epoch = 3000, loss = 0.0008061510755291935\n",
+      "epoch = 3100, loss = 0.0007995216692512476\n",
+      "epoch = 3200, loss = 0.0007929873620725107\n",
+      "epoch = 3300, loss = 0.0007865479637592704\n",
+      "epoch = 3400, loss = 0.0007802029571064566\n",
+      "epoch = 3500, loss = 0.0007739515646738663\n",
+      "epoch = 3600, loss = 0.0007677928034890169\n",
+      "epoch = 3700, loss = 0.0007617255298583218\n",
+      "epoch = 3800, loss = 0.0007557484760500335\n",
+      "epoch = 3900, loss = 0.0007498602803008235\n",
+      "epoch = 4000, loss = 0.0007440595113346663\n",
+      "epoch = 4100, loss = 0.0007383446883743893\n",
+      "epoch = 4200, loss = 0.0007327142974454802\n",
+      "epoch = 4300, loss = 0.0007271668046340241\n",
+      "epoch = 4400, loss = 0.0007217006668366321\n",
+      "epoch = 4500, loss = 0.0007163143404498219\n",
+      "epoch = 4600, loss = 0.0007110062883612633\n",
+      "epoch = 4700, loss = 0.0007057749855452488\n",
+      "epoch = 4800, loss = 0.0007006189235085142\n",
+      "epoch = 4900, loss = 0.0006955366137906366\n"
      ]
     }
    ],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "id": "b2c2e47f-410c-4965-86ed-e6bbdf51f7b2",
    "metadata": {},
    "outputs": [
@@ -522,10 +522,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicted_output: [[0 0]], [[0.00311704]]\n",
-      "predicted_output: [[1 0]], [[0.99008973]]\n",
-      "predicted_output: [[0 1]], [[0.98859112]]\n",
-      "predicted_output: [[1 1]], [[0.01510274]]\n"
+      "predicted_output: [[0 0]], [[0.00862984]]\n",
+      "predicted_output: [[1 0]], [[0.97403394]]\n",
+      "predicted_output: [[0 1]], [[0.97897574]]\n",
+      "predicted_output: [[1 1]], [[0.03502494]]\n"
      ]
     }
    ],
@@ -546,6 +546,14 @@
     "pred_output = mlp.forward(test_input)\n",
     "print(f'predicted_output: {test_input}, {pred_output}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "652e0c93-8f08-484b-b498-d5a63d78a554",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
