--- a/Research Paper Implementation/004. Recurrent Neural Network and Long Short-Term Memory/RNN.ipynb
+++ b/Research Paper Implementation/004. Recurrent Neural Network and Long Short-Term Memory/RNN.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "57f27772-f6b6-409d-85ac-cf77fa5862d0",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,91 @@
       "epoch 1200, loss: 0.003169889561582531\n",
       "epoch 1300, loss: 0.0028272919007194474\n",
       "epoch 1400, loss: 0.0026402149430549394\n",
-      "epoch 1500, loss: 0.002558961380749707\n"
+      "epoch 1500, loss: 0.002558961380749707\n",
+      "epoch 1600, loss: 0.0025224168161854703\n",
+      "epoch 1700, loss: 0.002476034191083159\n",
+      "epoch 1800, loss: 0.002381518376694911\n",
+      "epoch 1900, loss: 0.0022327983054101544\n",
+      "epoch 2000, loss: 0.0020584587873681962\n",
+      "epoch 2100, loss: 0.0018909908442846513\n",
+      "epoch 2200, loss: 0.0017451348416219412\n",
+      "epoch 2300, loss: 0.0016218391617572497\n",
+      "epoch 2400, loss: 0.0015172569677594679\n",
+      "epoch 2500, loss: 0.001427024639098021\n",
+      "epoch 2600, loss: 0.0013474447442723908\n",
+      "epoch 2700, loss: 0.001275765850412734\n",
+      "epoch 2800, loss: 0.00121018061621756\n",
+      "epoch 2900, loss: 0.0011496284393739014\n",
+      "epoch 3000, loss: 0.0010935202014368498\n",
+      "epoch 3100, loss: 0.0010415040817289365\n",
+      "epoch 3200, loss: 0.000993318538292065\n",
+      "epoch 3300, loss: 0.0009487213950445914\n",
+      "epoch 3400, loss: 0.0009074660385100081\n",
+      "epoch 3500, loss: 0.0008693001366216699\n",
+      "epoch 3600, loss: 0.0008339720902199833\n",
+      "epoch 3700, loss: 0.000801238206115992\n",
+      "epoch 3800, loss: 0.0007708680830146975\n",
+      "epoch 3900, loss: 0.0007426478078612841\n",
+      "epoch 4000, loss: 0.000716381337126978\n",
+      "epoch 4100, loss: 0.0006918906028558046\n",
+      "epoch 4200, loss: 0.000669014818565513\n",
+      "epoch 4300, loss: 0.0006476093379865933\n",
+      "epoch 4400, loss: 0.000627544305676422\n",
+      "epoch 4500, loss: 0.0006087032509789048\n",
+      "epoch 4600, loss: 0.0005909817154404558\n",
+      "epoch 4700, loss: 0.0005742859632031612\n",
+      "epoch 4800, loss: 0.0005585317981539149\n",
+      "epoch 4900, loss: 0.0005436434958462977\n",
+      "epoch 5000, loss: 0.0005295528490433409\n",
+      "epoch 5100, loss: 0.0005161983206565534\n",
+      "epoch 5200, loss: 0.0005035242953756166\n",
+      "epoch 5300, loss: 0.000491480420328523\n",
+      "epoch 5400, loss: 0.0004800210251034308\n",
+      "epoch 5500, loss: 0.00046910461190472993\n",
+      "epoch 5600, loss: 0.0004586934073431729\n",
+      "epoch 5700, loss: 0.00044875296820258035\n",
+      "epoch 5800, loss: 0.00043925183433974355\n",
+      "epoch 5900, loss: 0.0004301612227006137\n",
+      "epoch 6000, loss: 0.0004214547571806861\n",
+      "epoch 6100, loss: 0.0004131082297283372\n",
+      "epoch 6200, loss: 0.00040509938869722785\n",
+      "epoch 6300, loss: 0.0003974077509890958\n",
+      "epoch 6400, loss: 0.00039001443498224017\n",
+      "epoch 6500, loss: 0.00038290201165894954\n",
+      "epoch 6600, loss: 0.00037605437168142654\n",
+      "epoch 6700, loss: 0.0003694566064797043\n",
+      "epoch 6800, loss: 0.00036309490166790126\n",
+      "epoch 6900, loss: 0.0003569564413270041\n",
+      "epoch 7000, loss: 0.00035102932190354125\n",
+      "epoch 7100, loss: 0.00034530247460449104\n",
+      "epoch 7200, loss: 0.00033976559534615975\n",
+      "epoch 7300, loss: 0.00033440908142129595\n",
+      "epoch 7400, loss: 0.00032922397414324547\n",
+      "epoch 7500, loss: 0.00032420190684124336\n",
+      "epoch 7600, loss: 0.0003193350576337088\n",
+      "epoch 7700, loss: 0.00031461610649837987\n",
+      "epoch 7800, loss: 0.00031003819618067837\n",
+      "epoch 7900, loss: 0.00030559489658665167\n",
+      "epoch 8000, loss: 0.000301280172287417\n",
+      "epoch 8100, loss: 0.00029708835284843665\n",
+      "epoch 8200, loss: 0.00029301410570495756\n",
+      "epoch 8300, loss: 0.00028905241135092824\n",
+      "epoch 8400, loss: 0.00028519854061348916\n",
+      "epoch 8500, loss: 0.00028144803382577894\n",
+      "epoch 8600, loss: 0.0002777966817232424\n",
+      "epoch 8700, loss: 0.0002742405079038415\n",
+      "epoch 8800, loss: 0.0002707757527177839\n",
+      "epoch 8900, loss: 0.0002673988584448336\n",
+      "epoch 9000, loss: 0.00026410645566357725\n",
+      "epoch 9100, loss: 0.0002608953506949238\n",
+      "epoch 9200, loss: 0.0002577625140267705\n",
+      "epoch 9300, loss: 0.000254705069640537\n",
+      "epoch 9400, loss: 0.00025172028515527595\n",
+      "epoch 9500, loss: 0.0002488055627269439\n",
+      "epoch 9600, loss: 0.00024595843062554006\n",
+      "epoch 9700, loss: 0.00024317653545245996\n",
+      "epoch 9800, loss: 0.00024045763492465974\n",
+      "epoch 9900, loss: 0.0002377995911883157\n"
      ]
     }
    ],
@@ -279,8 +363,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "8584d8c5-031e-47f5-9982-24f3c9d374bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "input:  나라의\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "말이 중국과 달라 문자와 달라 문자와 서로 문자와 서로 통하지 서로 통하지 아니하기에 통하지 아니하기에 이런 아니하기에 이런 까닭으로 이런 까닭으로 어리석은 까닭으로 어리석은 백성이 어리석은 백성이 이르고자 백성이 이르고자 할 이르고자 할 바가 할 바가 있어도 바가 있어도 마침내\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "input:  break\n"
+     ]
+    }
+   ],
+   "source": [
+    "while 1:\n",
+    "    try:\n",
+    "        user_input = input('input: ')\n",
+    "        if user_input == 'break':\n",
+    "            break\n",
+    "        response = predict(user_input, 40)\n",
+    "        print(response)\n",
+    "    except:\n",
+    "        print('Try again')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0ca176-9580-4d0a-b139-29f08e8653be",
    "metadata": {},
    "outputs": [],
    "source": []
