feat: updating ipynb

--- a/Research Paper Implementation/004. Recurrent Neural Network and Long Short-Term Memory/LSTM.ipynb
+++ b/Research Paper Implementation/004. Recurrent Neural Network and Long Short-Term Memory/LSTM.ipynb
@@ -226,11 +226,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "70790584-34a6-43e2-9af4-1ecbec77909e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "import numpy as np\n",
+    "import re\n",
+    "\n",
+    "data = \"\"\"\n",
+    "나라의 말이 중국과 달라 문자와 서로 통하지 아니하기에 이런 까닭으로 어리석은 백성이 이르고자 할 바가 있어도 마침내 제 뜻을 능히 펴지 못할 사람이 많으니라 내가 이를 위해 가엾이 여겨 새로 스물여덟 글자를 만드노니 사람마다 하여 쉬이 익혀 날로 씀에 편안케 하고자 할 따름이니라\n",
+    "\"\"\"\n",
+    "\n",
+    "def preprocessing(text):\n",
+    "    data = re.sub('[^가-힣]', ' ', text)\n",
+    "    tokens = data.split()\n",
+    "    vocab = list(set(tokens))\n",
+    "    vocab_size = len(vocab)\n",
+    "\n",
+    "    word_to_idx = {word: i for i, word in enumerate(vocab)}\n",
+    "    idx_to_word = {i: word for i, word in enumerate(vocab)}\n",
+    "\n",
+    "    return tokens, vocab_size, word_to_idx, idx_to_word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba1d4f1d-ac43-49e5-b829-574e1027a593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(input):\n",
+    "    return 1 / (1 + np.exp(-input))\n",
+    "\n",
+    "def sigmoid_derivative(input):\n",
+    "    return input * (1 - input)\n",
+    "\n",
+    "def tanh(input, derivative=False):\n",
+    "    return np.tanh(input)\n",
+    "\n",
+    "def tanh_derivative(input):\n",
+    "    return 1 - input ** 2\n",
+    "\n",
+    "def so"
+   ]
   }
  ],
  "metadata": {
