feat: updated LSTM implementation

--- a/Research Paper Implementation/004. Recurrent Neural Network and Long Short-Term Memory/LSTM.ipynb
+++ b/Research Paper Implementation/004. Recurrent Neural Network and Long Short-Term Memory/LSTM.ipynb
@@ -226,6 +226,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4e439b16-79b6-4b0f-b4a1-c50edd93d2e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "70790584-34a6-43e2-9af4-1ecbec77909e",
    "metadata": {},
@@ -253,7 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "be822d32-fb77-40ea-ba97-ce8fc46a3bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens, vocab_size, word_to_idx, idx_to_word = preprocessing(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "ba1d4f1d-ac43-49e5-b829-574e1027a593",
    "metadata": {},
    "outputs": [],
@@ -270,8 +288,208 @@
     "def tanh_derivative(input):\n",
     "    return 1 - input ** 2\n",
     "\n",
-    "def so"
+    "def softmax(input):\n",
+    "    return np.exp(input) / np.sum(np.exp(input))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6d755765-5820-40ce-a26c-255b0ad3ae1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LSTM:\n",
+    "    def __init__(self, input_size, hidden_size, output_size, num_epochs, learning_rate):\n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_epochs = num_epochs\n",
+    "\n",
+    "        # Forget Gate\n",
+    "        self.Wf = np.random.randn(hidden_size, input_size) * 0.1\n",
+    "        self.bf = np.zeros((hidden_size, 1))\n",
+    "\n",
+    "        # Input Gate\n",
+    "        self.Wi = np.random.randn(hidden_size, input_size) * 0.1\n",
+    "        self.bi = np.zeros((hidden_size, 1))\n",
+    "\n",
+    "        # Candidate Gate\n",
+    "        self.Wc = np.random.randn(hidden_size, input_size) * 0.1\n",
+    "        self.bc = np.zeros((hidden_size, 1))\n",
+    "\n",
+    "        # Output Gate\n",
+    "        self.Wo = np.random.randn(hidden_size, input_size) * 0.1\n",
+    "        self.bo = np.zeros((hidden_size, 1))\n",
+    "\n",
+    "        # Final Gate\n",
+    "        self.Wy = np.random.randn(output_size, hidden_size)\n",
+    "        self.by = np.zeros((output_size, 1))\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.X = {}\n",
+    "\n",
+    "        self.HS = {-1 : np.zeros((self.hidden_size, 1))}\n",
+    "        self.CS = {-1 : np.zeros((self.hidden_size, 1))}\n",
+    "\n",
+    "        self.C = {}\n",
+    "        self.O = {}\n",
+    "        self.I = {}\n",
+    "        self.F = {}\n",
+    "        self.outputs = {}\n",
+    "\n",
+    "    def forward(self, inputs):\n",
+    "        x = {}\n",
+    "        outputs = []\n",
+    "        for t in range(len(inputs)):\n",
+    "            x[t] = np.zeros((vocab_size, 1))\n",
+    "            x[t][inputs[t]] = 1\n",
+    "            \n",
+    "            self.X[t] = np.concatenate((self.HS[t - 1], x[t]))\n",
+    "            \n",
+    "            self.F[t] = sigmoid(np.dot(self.Wf, self.X[t]) + self.bf)\n",
+    "            self.C[t] = tanh(np.dot(self.Wc, self.X[t]) + self.bc)\n",
+    "            self.I[t] = sigmoid(np.dot(self.Wi, self.X[t]) + self.bi)\n",
+    "            self.O[t] = sigmoid(np.dot(self.Wo, self.X[t]) + self.bo)\n",
+    "\n",
+    "            self.CS[t] = self.F[t] * self.CS[t - 1] + self.I[t] * self.C[t]\n",
+    "            self.HS[t] = self.O[t] * tanh(self.CS[t])\n",
+    "\n",
+    "            outputs += [np.dot(self.Wy, self.HS[t]) + self.by]\n",
+    "\n",
+    "        return outputs # logit\n",
+    "\n",
+    "    def bptt(self, errors, inputs):\n",
+    "        dLdWf, dLdbf = 0, 0\n",
+    "        dLdWi, dLdbi = 0, 0\n",
+    "        dLdWc, dLdbc = 0, 0\n",
+    "        dLdWo, dLdbo = 0, 0\n",
+    "        dLdWy, dLdby = 0, 0\n",
+    "\n",
+    "        dh_next, dc_next = np.zeros_like(self.HS[0]), np.zeros_like(self.CS[0])\n",
+    "        for t in reversed(range(len(inputs))):\n",
+    "            error = errors[t]\n",
+    "\n",
+    "            dLdWy += np.dot(error, self.HS[t].T)\n",
+    "            dLdby += error\n",
+    "\n",
+    "            dLdHS = np.dot(self.Wy.T, error) * dh_next\n",
+    "\n",
+    "            dLdo = tanh(self.CS[t]) * dLdHS * sigmoid_derivative(self.O[t])\n",
+    "            dLdWo += np.dot(dLdo, inputs[t].T)\n",
+    "            dLdbo += dLdo\n",
+    "\n",
+    "            dLdCS = tanh_derivative(tanh(self.CS[t])) * self.O[t] * dLdHS + dc_next\n",
+    "\n",
+    "            dLdf = dLdCS * self.CS[t-1] * sigmoid_derivative(self.F[t])\n",
+    "            dLdWf += np.dot(dLdf, inputs[t].T)\n",
+    "            dLdbf += dLdf\n",
+    "\n",
+    "            dLdi = dLdCS * self.C[t] * sigmoid_derivative(self.I[t])\n",
+    "            dLdWi += np.dot(dLdi, inputs[t].T)\n",
+    "            dLdbi += dLdi\n",
+    "\n",
+    "            dLdc = dLdCS * self.I[t] * tanh_derivative(self.C[t])\n",
+    "            dLdWc += np.dot(dLdc, inputs[t].T)\n",
+    "            dLdbc += dLdc\n",
+    "\n",
+    "            d_z = np.dot(self.Wf.T, dLdf) + np.dot(self.Wi.T, dLdi) + np.dot(self.Wc.T, dLdc) + np.dot(self.Wo.T, dLdo)\n",
+    "            \n",
+    "            d_h_next = d_z[:self.hidden_size, :]\n",
+    "            d_c_next = self.F[t] * dLdCS\n",
+    "        \n",
+    "        for d_ in (dLdWf, dLdbf, dLdWi, dLdbi, dLdWc, dLdbc, dLdWo, dLdbo, dLdWy, dLdby):\n",
+    "            np.clip(d_, -1, 1, out = d_)\n",
+    "        self.Wf += dLdWf* self.learning_rate * (-1)\n",
+    "        self.bf += dLdbf* self.learning_rate * (-1)\n",
+    "\n",
+    "        self.Wi += dLdWi* self.learning_rate * (-1)\n",
+    "        self.bi += dLdbi* self.learning_rate * (-1)\n",
+    "\n",
+    "        self.Wc += dLdWc* self.learning_rate * (-1)\n",
+    "        self.bc += dLdbc* self.learning_rate * (-1)\n",
+    "\n",
+    "        self.Wo += dLdWo* self.learning_rate * (-1)\n",
+    "        self.bo += dLdbo* self.learning_rate * (-1)\n",
+    "\n",
+    "        self.Wy += dLdWy* self.learning_rate * (-1)\n",
+    "        self.by += dLdby* self.learning_rate * (-1)\n",
+    "\n",
+    "    def train(self, inputs, labels):\n",
+    "        for _ in tqdm(range(self.num_epochs)):\n",
+    "            self.reset()\n",
+    "            input_idx = [word_to_idx[input] for input in inputs]\n",
+    "            predictions = self.forward(input_idx)\n",
+    "\n",
+    "            errors = []\n",
+    "            for t in range(len(predictions)):\n",
+    "                errors += [softmax(predictions[t])]\n",
+    "                errors[-1][word_to_idx[labels[t]]] -= 1\n",
+    "\n",
+    "            self.bptt(errors, self.X)\n",
+    "\n",
+    "    def test(self, inputs, labels):\n",
+    "        accuracy = 0\n",
+    "        probabilities = self.forward([word_to_idx[input] for input in inputs])\n",
+    "\n",
+    "        gt = ''\n",
+    "        output = '나라의'\n",
+    "\n",
+    "        for q in range(len(labels)):\n",
+    "            prediction = idx_to_word[np.argmax(softmax(probabilities[q].reshape(-1)))]\n",
+    "            gt += inputs[q] + ' '\n",
+    "            output += prediction + ' '\n",
+    "            if prediction == labels[q]:\n",
+    "                accuracy += 1\n",
+    "\n",
+    "        print(f'실제값: {gt}\\n\\n')\n",
+    "        print(f'예측값: {output}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a88851-abb1-4afa-a75f-f19fa565bfb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9e8dfb39e0804391871199127ae4cdc3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hidden_size = 50\n",
+    "train_X, train_y = tokens[:-1], tokens[1:]\n",
+    "lstm = LSTM(input_size=vocab_size+hidden_size, hidden_size=hidden_size, output_size=vocab_size, num_epochs=100000, learning_rate=0.05)\n",
+    "\n",
+    "lstm.train(train_X, train_y)\n",
+    "lstm.test(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5586e67-6b97-4594-abcb-dfc016dc21bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91840206-3409-46c3-aa9e-0aaa8012a07d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
